mainframe-workers/grammar/ibm_jcl/IBM_JCLParser.py
# Generated from ./grammar/ibm_jcl/IBM_JCL.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class IBM_JCLParser ( Parser ):

    grammarFileName = "IBM_JCL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "'('", "')'", "'/'", "'()'", "'*.'", 
                     "'.'", "'DATASET'", "'BACKUP'", "'JOB'", "'PRTFILE'", 
                     "'EXEC'", "'DD'", "'FROM'", "'TO'", "'END'", "'LIST'", 
                     "'JCLLIB'", "'JOBLIB'", "'INCLUDE'", "'MEMBER'", "'//'", 
                     "'DATA'", "'TDUMP'", "'SISN'", "'SET'", "'SORT'", "'FIELDS'", 
                     "'RECORD'", "'FIELD'", "'GENERATE'", "'PROC'", "'EXTENT'", 
                     "'FORMAT'", "'IF'", "'THEN'", "'ENDIF'", "'PEND'", 
                     "'AND'", "'OR'", "<INVALID>", "'*'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "DATASET_", "BACKUP_", "JOB_", "PRTFILE_", "EXEC_", 
                      "DD_", "FROM_", "TO_", "END_", "LIST_", "JCLLIB_", 
                      "JOBLIB_", "INCLUDE_", "MEMBER_", "DSLASH_", "DATA_", 
                      "TDUMP_", "SISN_", "SET_", "SORT_", "FIELDS_", "RECORD_", 
                      "FIELD_", "GENERATE_", "PROC_", "EXTENT_", "FORMAT_", 
                      "IF_", "THEN_", "ENDIF_", "PEND_", "AND_", "OR_", 
                      "COMMA", "STAR", "IDENTIFIER", "STRING", "STRING2", 
                      "NUMBER", "WS", "LINECOMMENT", "INLINECOMMENT", "NEWLINE" ]

    RULE_startRule = 0
    RULE_statement = 1
    RULE_inlineContent = 2
    RULE_recordFieldContent = 3
    RULE_recordField = 4
    RULE_recordFieldParam = 5
    RULE_generateContent = 6
    RULE_generateParam = 7
    RULE_generateParaName = 8
    RULE_generateParaValue = 9
    RULE_inlineParameters = 10
    RULE_inlineParam = 11
    RULE_inlineParaName = 12
    RULE_inlineParaValue = 13
    RULE_extentContent = 14
    RULE_extentParam = 15
    RULE_extentParaName = 16
    RULE_extentParaValue = 17
    RULE_tdumpContent = 18
    RULE_processedData = 19
    RULE_systemIdentifier = 20
    RULE_sortContent = 21
    RULE_sortOption = 22
    RULE_formatOption = 23
    RULE_sortFields = 24
    RULE_sortField = 25
    RULE_prtfileContent = 26
    RULE_prtFileParameter = 27
    RULE_backUpDatasetContent = 28
    RULE_backUpFrom = 29
    RULE_backUpTo = 30
    RULE_datasetContent = 31
    RULE_datasetOptions = 32
    RULE_datasetOption = 33
    RULE_datasetList = 34
    RULE_datasetName = 35
    RULE_ifStatement = 36
    RULE_condition = 37
    RULE_andOrCondition = 38
    RULE_combinableCondition = 39
    RULE_simpleCondition = 40
    RULE_conditionOperator = 41
    RULE_endIf = 42
    RULE_joblibStatement = 43
    RULE_continueStatement = 44
    RULE_jobStatement = 45
    RULE_jobParameters = 46
    RULE_jobParam = 47
    RULE_jobParamName = 48
    RULE_jobParamValue = 49
    RULE_execStatement = 50
    RULE_execParameters = 51
    RULE_execParam = 52
    RULE_execParamName = 53
    RULE_execParamValue = 54
    RULE_includeStatement = 55
    RULE_memberName = 56
    RULE_jcllibStatement = 57
    RULE_setStatement = 58
    RULE_procStatement = 59
    RULE_procEnd = 60
    RULE_procParameters = 61
    RULE_procParam = 62
    RULE_ddStatement = 63
    RULE_keyword = 64
    RULE_ddParameters = 65
    RULE_ddParam = 66
    RULE_ddParamName = 67
    RULE_ddParamValue = 68
    RULE_paramValueList = 69
    RULE_paramValue = 70
    RULE_cname = 71
    RULE_idxNumber = 72
    RULE_avalue = 73
    RULE_value = 74
    RULE_accessName = 75
    RULE_comment = 76
    RULE_charDataKeyword = 77
    RULE_inline = 78
    RULE_inline2 = 79

    ruleNames =  [ "startRule", "statement", "inlineContent", "recordFieldContent", 
                   "recordField", "recordFieldParam", "generateContent", 
                   "generateParam", "generateParaName", "generateParaValue", 
                   "inlineParameters", "inlineParam", "inlineParaName", 
                   "inlineParaValue", "extentContent", "extentParam", "extentParaName", 
                   "extentParaValue", "tdumpContent", "processedData", "systemIdentifier", 
                   "sortContent", "sortOption", "formatOption", "sortFields", 
                   "sortField", "prtfileContent", "prtFileParameter", "backUpDatasetContent", 
                   "backUpFrom", "backUpTo", "datasetContent", "datasetOptions", 
                   "datasetOption", "datasetList", "datasetName", "ifStatement", 
                   "condition", "andOrCondition", "combinableCondition", 
                   "simpleCondition", "conditionOperator", "endIf", "joblibStatement", 
                   "continueStatement", "jobStatement", "jobParameters", 
                   "jobParam", "jobParamName", "jobParamValue", "execStatement", 
                   "execParameters", "execParam", "execParamName", "execParamValue", 
                   "includeStatement", "memberName", "jcllibStatement", 
                   "setStatement", "procStatement", "procEnd", "procParameters", 
                   "procParam", "ddStatement", "keyword", "ddParameters", 
                   "ddParam", "ddParamName", "ddParamValue", "paramValueList", 
                   "paramValue", "cname", "idxNumber", "avalue", "value", 
                   "accessName", "comment", "charDataKeyword", "inline", 
                   "inline2" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    DATASET_=8
    BACKUP_=9
    JOB_=10
    PRTFILE_=11
    EXEC_=12
    DD_=13
    FROM_=14
    TO_=15
    END_=16
    LIST_=17
    JCLLIB_=18
    JOBLIB_=19
    INCLUDE_=20
    MEMBER_=21
    DSLASH_=22
    DATA_=23
    TDUMP_=24
    SISN_=25
    SET_=26
    SORT_=27
    FIELDS_=28
    RECORD_=29
    FIELD_=30
    GENERATE_=31
    PROC_=32
    EXTENT_=33
    FORMAT_=34
    IF_=35
    THEN_=36
    ENDIF_=37
    PEND_=38
    AND_=39
    OR_=40
    COMMA=41
    STAR=42
    IDENTIFIER=43
    STRING=44
    STRING2=45
    NUMBER=46
    WS=47
    LINECOMMENT=48
    INLINECOMMENT=49
    NEWLINE=50

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartRuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(IBM_JCLParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IBM_JCLParser.StatementContext)
            else:
                return self.getTypedRuleContext(IBM_JCLParser.StatementContext,i)


        def END_(self, i:int=None):
            if i is None:
                return self.getTokens(IBM_JCLParser.END_)
            else:
                return self.getToken(IBM_JCLParser.END_, i)

        def WS(self):
            return self.getToken(IBM_JCLParser.WS, 0)

        def getRuleIndex(self):
            return IBM_JCLParser.RULE_startRule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStartRule" ):
                listener.enterStartRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStartRule" ):
                listener.exitStartRule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStartRule" ):
                return visitor.visitStartRule(self)
            else:
                return visitor.visitChildren(self)




    def startRule(self):

        localctx = IBM_JCLParser.StartRuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_startRule)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4 or _la==22:
                self.state = 160
                self.statement()
                self.state = 165
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 169
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==16:
                self.state = 166
                self.match(IBM_JCLParser.END_)
                self.state = 171
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 173
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==47:
                self.state = 172
                self.match(IBM_JCLParser.WS)


            self.state = 175
            self.match(IBM_JCLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def continueStatement(self):
            return self.getTypedRuleContext(IBM_JCLParser.ContinueStatementContext,0)


        def jobStatement(self):
            return self.getTypedRuleContext(IBM_JCLParser.JobStatementContext,0)


        def execStatement(self):
            return self.getTypedRuleContext(IBM_JCLParser.ExecStatementContext,0)


        def jcllibStatement(self):
            return self.getTypedRuleContext(IBM_JCLParser.JcllibStatementContext,0)


        def setStatement(self):
            return self.getTypedRuleContext(IBM_JCLParser.SetStatementContext,0)


        def procStatement(self):
            return self.getTypedRuleContext(IBM_JCLParser.ProcStatementContext,0)


        def joblibStatement(self):
            return self.getTypedRuleContext(IBM_JCLParser.JoblibStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(IBM_JCLParser.IfStatementContext,0)


        def getRuleIndex(self):
            return IBM_JCLParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = IBM_JCLParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 185
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 177
                self.continueStatement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 178
                self.jobStatement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 179
                self.execStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 180
                self.jcllibStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 181
                self.setStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 182
                self.procStatement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 183
                self.joblibStatement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 184
                self.ifStatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InlineContentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def backUpDatasetContent(self):
            return self.getTypedRuleContext(IBM_JCLParser.BackUpDatasetContentContext,0)


        def prtfileContent(self):
            return self.getTypedRuleContext(IBM_JCLParser.PrtfileContentContext,0)


        def sortContent(self):
            return self.getTypedRuleContext(IBM_JCLParser.SortContentContext,0)


        def tdumpContent(self):
            return self.getTypedRuleContext(IBM_JCLParser.TdumpContentContext,0)


        def extentContent(self):
            return self.getTypedRuleContext(IBM_JCLParser.ExtentContentContext,0)


        def inlineParameters(self):
            return self.getTypedRuleContext(IBM_JCLParser.InlineParametersContext,0)


        def generateContent(self):
            return self.getTypedRuleContext(IBM_JCLParser.GenerateContentContext,0)


        def recordFieldContent(self):
            return self.getTypedRuleContext(IBM_JCLParser.RecordFieldContentContext,0)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(IBM_JCLParser.NEWLINE)
            else:
                return self.getToken(IBM_JCLParser.NEWLINE, i)

        def getRuleIndex(self):
            return IBM_JCLParser.RULE_inlineContent

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInlineContent" ):
                listener.enterInlineContent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInlineContent" ):
                listener.exitInlineContent(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInlineContent" ):
                return visitor.visitInlineContent(self)
            else:
                return visitor.visitChildren(self)




    def inlineContent(self):

        localctx = IBM_JCLParser.InlineContentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_inlineContent)
        self._la = 0 # Token type
        try:
            self.state = 200
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 187
                self.backUpDatasetContent()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 188
                self.prtfileContent()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 189
                self.sortContent()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 190
                self.tdumpContent()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 191
                self.extentContent()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 192
                self.inlineParameters()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 193
                self.generateContent()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 194
                self.recordFieldContent()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 196 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 195
                        _la = self._input.LA(1)
                        if _la <= 0 or _la==50:
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()

                    else:
                        raise NoViableAltException(self)
                    self.state = 198 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RecordFieldContentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RECORD_(self):
            return self.getToken(IBM_JCLParser.RECORD_, 0)

        def WS(self):
            return self.getToken(IBM_JCLParser.WS, 0)

        def recordField(self):
            return self.getTypedRuleContext(IBM_JCLParser.RecordFieldContext,0)


        def getRuleIndex(self):
            return IBM_JCLParser.RULE_recordFieldContent

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRecordFieldContent" ):
                listener.enterRecordFieldContent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRecordFieldContent" ):
                listener.exitRecordFieldContent(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRecordFieldContent" ):
                return visitor.visitRecordFieldContent(self)
            else:
                return visitor.visitChildren(self)




    def recordFieldContent(self):

        localctx = IBM_JCLParser.RecordFieldContentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_recordFieldContent)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 202
            self.match(IBM_JCLParser.RECORD_)
            self.state = 203
            self.match(IBM_JCLParser.WS)
            self.state = 204
            self.recordField()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RecordFieldContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FIELD_(self):
            return self.getToken(IBM_JCLParser.FIELD_, 0)

        def recordFieldParam(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IBM_JCLParser.RecordFieldParamContext)
            else:
                return self.getTypedRuleContext(IBM_JCLParser.RecordFieldParamContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(IBM_JCLParser.COMMA)
            else:
                return self.getToken(IBM_JCLParser.COMMA, i)

        def getRuleIndex(self):
            return IBM_JCLParser.RULE_recordField

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRecordField" ):
                listener.enterRecordField(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRecordField" ):
                listener.exitRecordField(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRecordField" ):
                return visitor.visitRecordField(self)
            else:
                return visitor.visitChildren(self)




    def recordField(self):

        localctx = IBM_JCLParser.RecordFieldContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_recordField)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 206
            self.match(IBM_JCLParser.FIELD_)
            self.state = 207
            self.match(IBM_JCLParser.T__0)
            self.state = 208
            self.match(IBM_JCLParser.T__1)
            self.state = 209
            self.recordFieldParam()
            self.state = 216
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==41:
                self.state = 210
                self.match(IBM_JCLParser.COMMA)
                self.state = 212
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 136343941018464) != 0):
                    self.state = 211
                    self.recordFieldParam()


                self.state = 218
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 219
            self.match(IBM_JCLParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RecordFieldParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self):
            return self.getTypedRuleContext(IBM_JCLParser.ValueContext,0)


        def getRuleIndex(self):
            return IBM_JCLParser.RULE_recordFieldParam

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRecordFieldParam" ):
                listener.enterRecordFieldParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRecordFieldParam" ):
                listener.exitRecordFieldParam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRecordFieldParam" ):
                return visitor.visitRecordFieldParam(self)
            else:
                return visitor.visitChildren(self)




    def recordFieldParam(self):

        localctx = IBM_JCLParser.RecordFieldParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_recordFieldParam)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 221
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GenerateContentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GENERATE_(self):
            return self.getToken(IBM_JCLParser.GENERATE_, 0)

        def WS(self):
            return self.getToken(IBM_JCLParser.WS, 0)

        def generateParam(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IBM_JCLParser.GenerateParamContext)
            else:
                return self.getTypedRuleContext(IBM_JCLParser.GenerateParamContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(IBM_JCLParser.COMMA)
            else:
                return self.getToken(IBM_JCLParser.COMMA, i)

        def getRuleIndex(self):
            return IBM_JCLParser.RULE_generateContent

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGenerateContent" ):
                listener.enterGenerateContent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGenerateContent" ):
                listener.exitGenerateContent(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGenerateContent" ):
                return visitor.visitGenerateContent(self)
            else:
                return visitor.visitChildren(self)




    def generateContent(self):

        localctx = IBM_JCLParser.GenerateContentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_generateContent)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 223
            self.match(IBM_JCLParser.GENERATE_)
            self.state = 224
            self.match(IBM_JCLParser.WS)
            self.state = 225
            self.generateParam()
            self.state = 230
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==41:
                self.state = 226
                self.match(IBM_JCLParser.COMMA)
                self.state = 227
                self.generateParam()
                self.state = 232
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GenerateParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def generateParaName(self):
            return self.getTypedRuleContext(IBM_JCLParser.GenerateParaNameContext,0)


        def generateParaValue(self):
            return self.getTypedRuleContext(IBM_JCLParser.GenerateParaValueContext,0)

